# vector-search-at-scale

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.skills/portfolio-session/: SKILL.md
MEMORY/: core_decisions_ai.md  core_decisions_human.md  full_history_ai.md  full_history_human.md
docs/: architecture.md  cost_per_query.md  infra.md
results/load/stub-10k/: c001.json  c010.json  c100.json  matrix.json
scripts/: capture_demo.sh  cost_table.py  hnsw_grid.py  plot_hnsw_frontier.py  plot_latency.py
src/vector_bench/: __init__.py  cli.py  cost.py  harness.py  io_utils.py  load.py  prices.py  types.py
src/vector_bench/backends/: __init__.py  hnsw_sim.py  pgvector.py  qdrant.py  stub.py  weaviate.py
terraform/envs/benchmark/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/common-network/: main.tf  outputs.tf  variables.tf
terraform/modules/pgvector/: main.tf  outputs.tf  user_data.sh.tftpl  variables.tf
terraform/modules/qdrant/: main.tf  outputs.tf  user_data.sh.tftpl  variables.tf
terraform/modules/weaviate/: main.tf  outputs.tf  user_data.sh.tftpl  variables.tf
terraform/scripts/: health.sh
tests/: test_architecture_doc.py  test_capture_demo_smoke.py  test_cli.py  test_cost.py  test_cost_table.py  test_harness.py  test_hnsw_grid.py  test_hnsw_recommended_defaults_snapshot.py  test_hnsw_sim.py  test_io_utils_atomic_write.py  test_load.py  test_plot_latency.py  test_public_surface.py  test_readme_decision_range.py  test_readme_snapshot.py  test_stub_backend.py  test_workflows_concurrency.py  test_workflows_timeout_minutes.py  test_workflows_yaml_parseable.py
