[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "vector-bench"
version = "0.0.1"
description = "Reproducible benchmark harness for pgvector, Qdrant, and Weaviate at 1M / 10M / 100M scale."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "JT McHorse", email = "jmchorse.tech@gmail.com" }]
keywords = ["vector-search", "benchmark", "pgvector", "qdrant", "weaviate", "hnsw"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
]

# numpy is the only required runtime dep — needed for the deterministic
# vector generator, the ground-truth cosine top-k, and the latency stats.
# Backend SDKs are all lazy-imported behind extras so the harness loads
# (and CI runs) without them.
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
pgvector = ["psycopg[binary]>=3.2"]
qdrant = ["qdrant-client>=1.10"]
weaviate = ["weaviate-client>=4.7"]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
vector-bench = "vector_bench.cli:main"

[project.urls]
Repository = "https://github.com/dj-techs/vector-search-at-scale"
Issues    = "https://github.com/dj-techs/vector-search-at-scale/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vector_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT"]
ignore = ["E501"]
